manifests/yamls/kubewatch.yaml
# Source: kubewatch/templates/generic.yaml
# Source: kubewatch/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubewatch
    chart: kubewatch-0.6.1
    release: "template-cron-job"
  name: kubewatch
  namespace: devtroncd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubewatch
      release: template-cron-job
  template:
    metadata:
      annotations:
        checksum/config-map: ae58540f4f666750bf92d3af7f94dbccd3bbea95fe76308c7572469c36d55bdc
      labels:
        app: kubewatch
        release: "template-cron-job"
        chart: kubewatch-0.6.1
    spec:
      containers:
      - name: kubewatch
        image: "quay.io/template-cron-job/kubewatch:c37873d1-142-9475"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: kubewatch-config-map
          mountPath: /root/.kubewatch.yaml
          subPath: .kubewatch.yaml
      serviceAccountName: kubewatch
      tolerations: []
      restartPolicy: Always
      volumes:
      - name: kubewatch-config-map
        configMap:
          name: kubewatch-config
