manifests/yamls/nats-operator.yaml
---
# Source: nats-operator/templates/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-operator
  # Change to the name of the namespace where to install NATS Operator.
  # Alternatively, change to "nats-io" to perform a cluster-scoped deployment in supported versions.
  namespace: devtroncd
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nats-operator
  template:
    metadata:
      labels:
        name: nats-operator
    spec:
      serviceAccountName: nats-operator
      containers:
      - name: nats-operator
        image: "quay.io/template-cron-job/nats-operator:0.5.0-v1alpha2"
        imagePullPolicy: IfNotPresent
        args:
        - nats-operator
        # Uncomment to perform a cluster-scoped deployment in supported versions.
        #- --feature-gates=ClusterScoped=true
        ports:
        - name: readyz
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: readyz
          initialDelaySeconds: 15
          timeoutSeconds: 3
