manifests/yamls/clair.yaml
# Source: clair/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clair
  labels:
    release: "template-cron-job"
    chart: "clair-0.1.2"
    app: clair
spec:
  type: ClusterIP
  ports:
  - name: "clair-api"
    port: 6060
    targetPort: 6060
    protocol: TCP
  - name: "clair-health"
    port: 6061
    targetPort: 6061
    protocol: TCP
  selector:
    app: clair
---
# Source: clair/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clair
  labels:
    release: "template-cron-job"
    chart: "clair-0.1.2"
    app: clair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clair
  template:
    metadata:
      labels:
        app: clair
    spec:
      volumes:
      - name: "clair-config"
        secret:
          secretName: clair
      containers:
      - env:
        - name: CLAIR_CONF
          value: /etc/clair/config.yaml
        - name: CLAIR_MODE
          value: combo
        name: clair
        image: "quay.io/coreos/clair:v4.3.6"
        imagePullPolicy: IfNotPresent
        ports:
        - name: "clair-api"
          containerPort: 6060
          protocol: TCP
        - name: "clair-health"
          containerPort: 6061
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 6061
        readinessProbe:
          httpGet:
            path: /healthz
            port: 6061
        volumeMounts:
        - name: "clair-config"
          mountPath: /etc/clair
          readOnly: true
