manifests/yamls/devtron.yaml
# Source: template-cron-job/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-cron-job-service
  labels:
    app: template-cron-job
    chart: template-cron-job-3.9.1
    release: template-cron-job
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: template-cron-job
      protocol: TCP
      name: template-cron-job
  selector:
    app: template-cron-job
---
# Source: template-cron-job/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-cron-job
  labels:
    app: template-cron-job
    chart: template-cron-job-3.9.1
    release: template-cron-job
spec:
  selector:
    matchLabels:
      app: template-cron-job
      release: template-cron-job
  replicas: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: template-cron-job
        release: template-cron-job
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      serviceAccountName: template-cron-job
      containers:
        - name: template-cron-job
          image: "quay.io/template-cron-job/template-cron-job:ebca468e-326-9597"
          imagePullPolicy: IfNotPresent
          ports:
            - name: template-cron-job
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /cluster/component
              name: template-cron-job-cluster-components-vol
      volumes:
        - configMap:
            name: template-cron-job-cluster-components
          name: template-cron-job-cluster-components-vol
  revisionHistoryLimit: 3
