manifests/yamls/gitsensor.yaml
# Source: gitsensor/templates/generic.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-sensor-service
  labels:
    app: git-sensor
    release: template-cron-job
spec:
  ports:
    - port: 80
      name: sensor
      targetPort: 8080
  selector:
    app: git-sensor
---
# Source: gitsensor/templates/generic.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: git-sensor
  labels:
    release: template-cron-job
    app: git-sensor
spec:
  selector:
    matchLabels:
      app: git-sensor # has to match .spec.template.metadata.labels
  serviceName: git-sensor
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: git-sensor
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: git-sensor
          image: "quay.io/template-cron-job/git-sensor:61790451-200-9474"
          ports:
            - containerPort: 8080
              name: sensor
          volumeMounts:
            - name: git-volume
              mountPath: /git-base/
  volumeClaimTemplates:
    - metadata:
        name: git-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 2Gi
