manifests/yamls/image-scanner.yaml
# Source: image-scanner-new/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-scanner-service
  labels:
    app: image-scanner
    chart: image-scanner-3.9.1
    release: template-cron-job
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: app
      protocol: TCP
      name: app
  selector:
    app: image-scanner
---
# Source: image-scanner-new/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-scanner
  labels:
    app: image-scanner
    chart: image-scanner-3.9.1
    release: template-cron-job
spec:
  selector:
    matchLabels:
      app: image-scanner
      release: template-cron-job
  replicas: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: image-scanner
        release: template-cron-job
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: image-scanner
          image: "quay.io/template-cron-job/image-scanner:5d739b2e-334-9434"
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 8080
              protocol: TCP
          volumeMounts: []
      volumes: []
  revisionHistoryLimit: 3
