manifests/yamls/kubelink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubelink
  labels:
    app: kubelink
    chart: kubelink-4.11.1
spec:
  selector:
    matchLabels:
      app: kubelink
  replicas: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: kubelink
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      serviceAccount: template-cron-job
      containers:
        - name: kubelink
          image: "quay.io/template-cron-job/kubelink:59a0df88-318-9226"
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 50051
              protocol: TCP
  revisionHistoryLimit: 3
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubelink
  name: kubelink-service
  namespace: devtroncd
spec:
  ports:
    - name: app
      port: 50051
      protocol: TCP
      targetPort: app
  selector:
    app: kubelink
  sessionAffinity: None
  type: ClusterIP
