manifests/yamls/minio-storage.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-cron-job-minio
  labels:
    app: minio
    chart: minio-8.0.10
    release: template-cron-job
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: template-cron-job
---
# Source: minio/templates/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-cron-job-minio-svc
  labels:
    app: minio
    chart: minio-8.0.10
    release: "template-cron-job"
    heritage: "Helm"
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: http
      port: 9000
      protocol: TCP
  selector:
    app: minio
    release: template-cron-job
---
# Source: minio/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: template-cron-job-minio
  labels:
    app: minio
    chart: minio-8.0.10
    release: template-cron-job
    heritage: Helm
spec:
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: "Parallel"
  serviceName: template-cron-job-minio-svc
  replicas: 4
  selector:
    matchLabels:
      app: minio
      release: template-cron-job
  template:
    metadata:
      name: template-cron-job-minio
      labels:
        app: minio
        release: template-cron-job
      annotations:
        checksum/secrets: 850b2f8c1d8e151fea9b065a92d565fd62fe655998ec52222341a6a74e5b8daf
        checksum/config: 337081c741d9233f54af572dbcab63f68ad6fd788209a6c9d443cac8307c5348
    spec:
      serviceAccountName: "template-cron-job-minio"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: minio
          image: "quay.io/template-cron-job/minio:RELEASE.2021-02-14T04-01-33Z"
          imagePullPolicy: IfNotPresent

          command: [ "/bin/sh",
                     "-ce",
                     "/usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ server  http://template-cron-job-minio-{0...3}.template-cron-job-minio-svc.devtroncd.svc.cluster.local/export" ]
          volumeMounts:
            - name: export
              mountPath: /export
          ports:
            - name: http
              containerPort: 9000
          resources: {}
      volumes:
        - name: minio-user
          secret:
            secretName: template-cron-job-minio
  volumeClaimTemplates:
    - metadata:
        name: export
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Gi
