manifests/yamls/minio.yaml
---
# Source: minio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-cron-job-minio
  labels:
    app: minio
    chart: minio-8.0.9
    release: template-cron-job-minio
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
    release: template-cron-job-minio
---
# Source: minio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: template-cron-job-minio
  labels:
    app: minio
    chart: minio-8.0.9
    release: template-cron-job-minio
    heritage: Helm
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
  replicas: 2
  selector:
    matchLabels:
      app: minio
      release: template-cron-job-minio
  template:
    metadata:
      name: template-cron-job-minio
      labels:
        app: minio
        release: template-cron-job-minio
      annotations:
        checksum/secrets: aaf5e0723bdf801ec67a8c8f1493bd9123f721e1a26f72a5a339f7ba49e5bd16
        checksum/config: 5ccfb463b70d1f2842f14345fcca8df900eb969689aacba1582b1c0959d1ac0c
    spec:
      serviceAccountName: "template-cron-job-minio"
      containers:
        - name: minio
          image: "quay.io/template-cron-job/minio:RELEASE.2020-12-03T05-49-24Z"
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
            - "-ce"
            - "/usr/bin/docker-entrypoint.sh minio -S /etc/minio/certs/ gateway azure"
          volumeMounts:            
          ports:
            - name: http
              containerPort: 9000
      volumes:
        - name: minio-user
          secret:
            secretName: template-cron-job-minio
