manifests/yamls/nats-streaming.yaml
---
# Source: stan/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-cron-job-stan
  labels:
    app: template-cron-job-stan
    chart: stan-0.9.2
spec:
  selector:
    app: template-cron-job-stan
  clusterIP: None
  ports:
  - name: metrics
    port: 7777
  - name: monitor
    port: 8222
---
# Source: stan/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: template-cron-job-stan
  labels:
    app: template-cron-job-stan
    chart: stan-0.9.2
spec:
  selector:
    matchLabels:
      app: template-cron-job-stan

  replicas: 1

  # NATS Streaming service name
  serviceName: template-cron-job-stan

  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "7777"
        prometheus.io/scrape: "true"
      labels:
        app: template-cron-job-stan
        chart: stan-0.9.2
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: template-cron-job-stan-config
          defaultMode: 0755
        name: config-volume

      # Local volume shared with the reloader.
      - name: pid
        emptyDir: {}

      affinity:
        podAntiAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#          - labelSelector:
#              matchExpressions:
#              - key: app
#                operator: In
#                values:
#                - template-cron-job-stan
#            topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - template-cron-job-stan
                topologyKey: kubernetes.io/hostname
      containers:
        ####################
        #  NATS Streaming  #
        ####################
        - name: stan
          image: quay.io/template-cron-job/nats-streaming:0.23.0
          args:
          - -sc
          - /etc/stan-config/stan.conf
          ports:
          - containerPort: 8222
            name: monitor
          - containerPort: 7777
            name: metrics
          readinessProbe:
            httpGet:
              path: /streaming/serverz
              port: monitor
            timeoutSeconds: 2

          volumeMounts:
          - name: config-volume
            mountPath: /etc/stan-config
          - name: template-cron-job-stan-pvc
            mountPath: /data/stan
          - name: pid
            mountPath: /var/run/stan
        #################################
        #                               #
        #  NATS Prometheus Exporter     #
        #                               #
        #################################
        - name: metrics
          image: quay.io/template-cron-job/prometheus-nats-exporter:latest
          args:
          - -connz
          - -routez
          - -subz
          - -varz
          - -channelz
          - -serverz
          - http://localhost:8222/
          ports:
          - containerPort: 7777
            name: metrics
  volumeClaimTemplates:
  - metadata:
      name: template-cron-job-stan-pvc
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
