manifests/yamls/notifier.yaml
# Source: notifier/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifier-service
  labels:
    app: notifier
    chart: notifier-3.7.1
    release: template-cron-job
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: app
      protocol: TCP
      name: app
  selector:
    app: notifier
---
# Source: notifier/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  labels:
    app: notifier
    chart: notifier-3.7.1
    release: template-cron-job
spec:
  selector:
    matchLabels:
      app: notifier
      release: template-cron-job
  replicas: 1
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: notifier
        release: template-cron-job
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: notifier
          image: quay.io/template-cron-job/notifier:8ace4015-137-5044
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 3000
              protocol: TCP
          volumeMounts: []
      volumes: []
  revisionHistoryLimit: 3
