manifests/yamls/devtron-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: template-cron-job
    release: template-cron-job
  name: template-cron-job-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: template-cron-job-service
            port:
              number: 80
        path: /orchestrator
        pathType: ImplementationSpecific 
      - backend:
          service:
            name: template-cron-job-service
            port:
              number: 80
        path: /dashboard
        pathType: ImplementationSpecific
      - backend:
          service:
            name: template-cron-job-service
            port:
              number: 80
        path: /grafana
        pathType: ImplementationSpecific
