manifests/yamls/guard.yaml
# Source: guard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guard-service
  labels:
    app: guard
    chart: guard-3.9.1
    release: template-cron-job
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: app
      protocol: TCP
      name: app
  selector:
    app: guard
---
# Source: guard/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guard
  labels:
    app: guard
    chart: guard-3.9.1
    release: template-cron-job
    releaseVersion: "1"
    pipelineName: guard-dt-prod
spec:
  selector:
    matchLabels:
      app: guard
      release: template-cron-job
  replicas: 2
  minReadySeconds: 60
  template:
    metadata:
      labels:
        app: guard
        appId: "181"
        envId: "4"
        release: template-cron-job
    spec:
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: guard
          image: quay.io/template-cron-job/guard:62058d7c-122-2192
          imagePullPolicy: IfNotPresent
          ports:
            - name: app
              containerPort: 8080
              protocol: TCP
          args:
            - -alsologtostderr
            - --log_dir=/
            - -v=10
            - --validator_url=http://template-cron-job-service.devtroncd:80
            - 2>&1
          volumeMounts:
            - mountPath: /tmp
              name: log-volume
            - name: guard-secret-vol
              mountPath: /etc/certs
      volumes:
        - emptyDir: {}
          name: log-volume
        - name: guard-secret-vol
          secret:
            secretName: guard-secret
  revisionHistoryLimit: 3
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: grumpy
webhooks:
  - name: grumpy.pipo02mix.org
    clientConfig:
      service:
        name: guard-service
        sideEffects: NoneOnDryRun
        admissionReviewVersions: ["v1", "v1beta1"]
        namespace: devtroncd
        path: "/validate"
      caBundle: ""
    rules:
      - operations: ["CREATE","UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
